everything works but nullaway still fails
Signed-off-by: Gerrit Meier <meistermeier@gmail.com>